public/stylesheets/styles.css
/* ... */
.partner-logo:hover {
  filter: none;
  -webkit-filter: grayscale(0%);
  -moz-filter:    grayscale(0%);
  -ms-filter:     grayscale(0%);
  -o-filter:      grayscale(0%);
  -webkit-transition: ease-out .5s;
  -moz-transition: ease-out .5s;
  -o-transition: ease-out .5s;
  transition: ease-out .5s;
}
@media only screen and (min-width: 0) {
  .partner-logo {
    height: 50px;
  }
}
@media only screen and (min-width: 601px) {}
@media only screen and (min-width: 992px) {
  .partner-logo {
    height: 100px;
  }
}
@media only screen and (min-width: 1200px) {}

/*** Login and Other Pages ***/
@media only screen and (min-width: 0) {
  .section { padding: 20px 0; }
  .modal-c {
    display: block;
    background-color: #fff;
    padding: 0;
    width: 100%;
    margin: auto;
    border-radius: 4px;
    overflow: hidden;
  }
  .modal-c .modal-content {
    padding: 10px 20px;
  }
  .modal-c .social-login-wrapper {
    margin-top: 10px;
  }
  .modal-c .modal-footer {
    padding: 0 20px;
    height: 2.5em;
    line-height: 2.5;
    vertical-align: middle;
  }
  img.social-login-btn {
    height: 70px;
    width: 70px;
    margin: 0 5px;
    cursor: pointer;
  }
  .parallax img {
      width: 100%;
  }
  .parallax-container {
    height: 260px;
  }
  .parallax-title {
    color: #fff;
    position: relative;
    left: 0;
    margin-top: -35px;
    font-size: 3rem;
    line-height: 3rem;
  }
  .info-title { font-size: 2.2rem; }
  .info-details { font-size: 1rem; }
  .info-details li { margin: 10px 0; }
  .info-terms { font-size: .6em; }
  .terms-o { margin-left: -25px; }
  .terms li {
    list-style: decimal;
    margin-left: -30px;
  }
  ol.terms-sub li {
    list-style: lower-alpha;
  }
  ol.terms-sub-sub li {
    list-style: lower-roman;
  }
  ul.terms-sub li {
    list-style: none;
    margin-left: 0;
  }
}
@media only screen and (min-width: 601px)  {
  .section { padding: 20px 0; }
  .modal-c {
    display: block;
    background-color: #fff;
    padding: 0;
    width: 100%;
    margin: auto;
    border-radius: 4px;
    overflow: hidden;
  }
  .modal-c .modal-content {
    padding: 10px 20px;
  }
  .modal-c .social-login-wrapper {
    margin-top: 10px;
  }
  .modal-c .modal-footer {
    padding: 0 20px;
    height: 2.5em;
    line-height: 2.5;
    vertical-align: middle;
  }
  .parallax-container {
    height: 360px;
  }
  .parallax-title {
    color: #fff;
    position: relative;
    left: 0;
    margin-top: -70px;
    font-size: 6rem;
    line-height: 6rem;
  }
  .info-title { font-size: 3rem; }
  .info-details { font-size: 1.4rem; }
  .info-terms { font-size: .75em; }
}
@media only screen and (min-width: 992px)  {
  .section { padding: 50px 0 500px 0; }
  .section-sm { padding: 20px 0; }
  .modal-c {
    display: block;
    background-color: #fff;
    padding: 0;
    width: 100%;
    margin: auto;
    border-radius: 4px;
    overflow: hidden;
  }
  .modal-c .modal-content {
    padding: 10px 20px;
  }
  .modal-c .social-login-wrapper {
    margin-top: 10px;
  }
  .modal-c .modal-footer {
    padding: 0 20px;
    height: 2.5em;
    line-height: 2.5;
    vertical-align: middle;
  }
  .index-parallax-container {
    height: 820px;
  }
  .parallax-container {
    height: 500px;
  }
  .parallax-title {
    color: #fff;
    position: relative;
    left: 0;
    margin-top: -88px;
    font-size: 7rem;
    line-height: 7rem;
  }
  .info-title { font-size: 3rem; }
  .info-details { font-size: 1.4rem; }
  .info-details li { margin: 10px 0; }
  ul.m-info li {
    font-size: 1.8em;
    margin: 10px 0;
  }
  .relative {
    position: relative;
  }
  .m-info-circle-1 {
    position: relative;
    height: 200px;
    width: 200px;
    border-radius: 50%;
  }
  .m-info-circle-1-text {
    position: absolute;
    top: 0;
    left: 100px;
    height: 200px;
    line-height: 1.5;
    vertical-align: middle;
  }
}
@media only screen and (min-width: 1200px) {}

/** Checkout **/
@media only screen and (max-width: 600px)  {
  h5.sm {
    font-size: 1em;
  }
  h5.sm i.fa {
    font-size: 3em !important;
    margin-bottom: 7px;
  }
}
/* ... */

